test/Harper/Tests/Bad/AccessingRefDataAsIfItWereAValueType.har
ref RefBox a = {
    data = {
        a :: a;
    }

    ctor :: a -> impure -> RefBox a;
    ctor a = {
        this.data.a := a;
        return this;
    };

    get :: impure -> a;
    get = this.data.a;

    set :: a -> impure -> ();
    set a = {
        this.data.a := a;
    };
};

main :: Integer;
main = {
    (b :: RefBox Integer) = RefBox.ctor 42 ();

    return b.a;
};